Paragraph Indentation removed.

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -105,24 +105,22 @@ The Ants-Review Protocol is divided into different modules responsible for the f
 
 \subsubsection{AntsReview.}
 AntsReview (see Figure \ref{fig:contracts} (\textbf{a})), the core of the smart contracts written in \emph{Solidity}\footnote[7]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, a contract-oriented programming language for writing smart contracts that run on the Ethereum Virtual Machine, is deployed on Ethereum Kovan Testnet\footnote[8]{\emph{AntsReview}.\textsc{URL:}\newline https://kovan.etherscan.io/address/0x85be8F04482cBB920550d5469E4dEdD6e1788121.}. AntsReview implements a bounty-like system (based on the \emph{StandardBounties} contract\footnote[9]{\emph{StandardBounties.sol}.\textsc{URL:}https://github.com/Bounties-Network/StandardBounties/blob/master/contracts/StandardBounties.sol.}) where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
-\newline In order to create a transparent and openly accessible AntReview, Alice has to complete a series of required tasks:
+\par In order to create a transparent and openly accessible AntReview, Alice has to complete a series of required tasks:
  \begin{itemize}
      \item \emph{upload of the files} containing the requirements of the peer review and the paper to be reviewed into IPFS, whose hash is stored into the Ethereum blockchain as PoE;
      \item \emph{specification of a deadline} in the form of a UNIX timestamp after which the fulfillment will no longer be accepted;
-     \item \emph{specification of the Issuers and an Approver} to respectively modify the AntReview and approve the peer reviews sent by the peer-reviewers;
+     \item \emph{specification of the Issuers and an Approver} to respectively modify the AntReview and approve the peer reviews sent by the peer-reviewers.
 \end{itemize}
- Alice or the issuers can at any time update the AntReview details (issuers, paper, requirements, deadline) with the function \emph{changeAntReview()} and add/remove the approver with the functions \emph{addApprover()} and \emph{removeApprover()}.
+Alice or the issuers can at any time update the AntReview details (issuers, paper, requirements, deadline) with the function \emph{changeAntReview()} and add/remove the approver with the functions \emph{addApprover()} and \emph{removeApprover()}.
  Anters (contributors) can contribute to Alice's AntReview with the function \emph{contribute()}, by specifying the amount of ANTS they are willing to send. 
-\\
 Bob (peer-reviewer) can download the files relative to Alice's paper and the requirements of the peer review by leveraging on the content-addressing feature of IPFS that allows anyone to find the document using an IPFS explorer; subsequently, Bob can submit a peer review before the deadline by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by uploading the peer review on IPFS, whose hash is stored into Ethereum blockchain as PoE. He can update the peer review with the function \emph{updateReview()} by uploading the new version on IPFS. 
-\\
 Ted (approver) can accept the peer review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the amount of ANTS that will be transferred as reward from the contract to Bob.
 If Alice's AntReview does not receive any peer review and the deadline expires, Anters can get a refund with the function \emph{refund()} for their contributions. In order to avoid residual balance, Alice can withdraw ANTS from the AntReview's balance, if the deadline expires, with the function \emph{withdrawAntReview()}, and the contract will transfer the amount specified to Alice and update the balance.
 \\
 Access management of the Ants-Review protocol is defined and controlled by \emph{AntsReviewRoles} (see Figure \ref{fig:contracts} (\textbf{b})), implemented by leveraging on \emph{AccessControl.sol} by OpenZeppelin Library\footnote[10]{\emph{OpenZeppelin Library}.\textsc{URL:} https://openzeppelin.com.} that is used to define the Issuer and Peer-Reviewer Roles. AntsReviewRoles also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, granted by default to the owner of the smart contracts, to pause (or unpause) all the functions in case of a security emergency, such as an attack to the smart contracts.
 
 \subsubsection{Privacy.}
-The anonymity of an agent in the system is achieved in two ways: via pseudo-anonymity, granted through Ethereum's EOAs that can pseudo-obscure the identity of the agent, and via private transactions allowed by AZTEC Protocol's security layer \cite{AZTEC}.
+The anonymity of an agent in the system is achieved in two ways: via pseudo-anonymity, granted through Ethereum's EOAs that can pseudo-obscure the identity of the agent, and via private transactions allowed by AZTEC\cite{AZTEC} Protocol's security layer.
 
 \paragraph{\textbf{Pseudo-anonymity}-}EOAs in Ethereum are controlled via private keys. However, the privacy is limited by the fact that both the blockchain and its transactions are public.  Therefore, the details of the transactions are visible to anyone by browsing a block explorer (such as Etherscan \footnote[11]{\emph{Etherscan}. \textsc{URL:} https://etherscan.io/.}) and are subject to data mining that could extract value and identify users in the blockchain.
 \paragraph{\textbf{Private transactions}-}AZTEC Protocol was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (zk-SNARKs)\cite{zSNARK} and homomorphic encryption\footnote[12]{\emph{Homomorphic Encryption}. \textsc{URL:}\newline https://vitalik.ca/general/2020/07/20/homomorphic.html.} to validate encrypted transactions. zk-SNARKs are zero-knowledge proofs that require no interaction between prover and verifier. zk-SNARKs are used inside the Ants-Review protocol via the zkANTS token to allow private transactions between the agents. Future developments will allow to leverage on Permutations over Lagrange-bases for Oecumenical Noninteractive arguments of Knowledge (PLONK) \cite{PLONK}, 
@@ -131,11 +129,9 @@ a universal zk-SNARK construction that reduces gas costs and improves scalabilit
 \subsubsection{Tokenomics.}
 Ants-Review integrates a few \emph{ERC20}\footnote[13]{\emph{EIP 20}. \textsc{URL:} https://eips.ethereum.org/EIPS/eip-20.} tokens, each of whom plays an integral role in the functioning and anonymity of the decentralized protocol.
 \newline ANTS (see Figure \ref{fig:contracts}, (\textbf{c})) is the primary protocol token and can be staked into an AntReview. It's implemented by inheriting \emph{ERC20.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
-A Faucet (see Figure \ref{fig:contracts}, (\text{d}) is implemented to distribute ANTS token on Kovan Testnet for testing purposes.
-\newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{e})) is a wrapper of ANTS that will be used inside the protocol to allow for private transactions among the agents of the protocol, preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters. It will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[14]{\emph{EIP  1724}.\textsc{URL:} https://github.com/ethereum/EIPs/issues/1724.} will be used as a template to build an AZTEC-compatible asset.
+A Faucet (see Figure \ref{fig:contracts}, (\text{d}) is implemented to distribute ANTS token on Kovan Testnet for testing purposes. \newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{e})) is a wrapper of ANTS that will be used inside the protocol to allow for private transactions among the agents of the protocol, preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters. It will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[14]{\emph{EIP  1724}.\textsc{URL:} https://github.com/ethereum/EIPs/issues/1724.} will be used as a template to build an AZTEC-compatible asset.
 \\
-\\
-The current state of the art of Ants-Review is represented by version 0.2.0 (MVP) live on Ethereum Kovan Testnet (see Supplementary Material).
+\\ The current state of the art of Ants-Review is represented by version 0.2.0 (MVP) live on Ethereum Kovan Testnet (see Supplementary Material).
 
 \section{Discussions}
 We have described how Ants-Review protocol can solve the limitations of the current peer review system (see 2.1). In particular we showed how the lack of recognition, the lack of transparency, fraud and misconduct can be solved via the Ants-Review Protocol (see §AntsReview in 3.2); the social and cognitive biases via anonymity granted by AZTEC Protocol (see §Privacy in 3.2); the slowness of the process, the need for evaluation of the peer-reviews themselves and the need for increasing the number of reviewers through the creation of the community of Anters. 
