fix footnotes & refs

--- a/e.bib
+++ b/e.bib
@@ -1,7 +1,7 @@
 @misc{AIRA, 
 author = {}, 
 title = {{Artificial Intelligence to help meet global demand for high-quality, objective peer-review in publishing.}}, 
-url = {https://blog.frontiersin.org/2020/07/01/artificial-intelligence-to-help-meet-global-demand-for-high-quality-objective-peer-review-in-publishing/}, 
+url = {https://blog.frontiersin.org/2020/07/01/artificial-intelligence-to-help-meet-global-demand-for-high-quality-objective-peer-review-in-publishing/\#:\textbackslashtextasciitilde:text=In\%20an\%20industry\%20first\%2C\%20Artificial,in\%20the\%20peer\%2Dreview\%20process.\&text=The\%20increasing\%20amount\%20of\%20scientific,novel\%20decision\%20support\%20technologies\%20essential.}, 
 year = {2020}
 }
 @article{UPR, 
