--- a/ref3-system.bib
+++ b/ref3-system.bib
@@ -1,3 +1,9 @@
+@misc{HomEncr, 
+author = {Buterin, Vitalik}, 
+title = {{Exploring Fully Homomorphic Encryption}}, 
+url = {https://vitalik.ca/general/2020/07/20/homomorphic.html}, 
+year = {2020}
+}
 @article{zSNARK, 
 author = {Reitwießner, Christian}, 
 title = {{zkSNARKs in a Nutshell}}, 
@@ -26,34 +32,6 @@ abstract = {{Due to the voluntary nature of open source software, it can be hard
 journal = {arXiv}, 
 local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Zhou-Bounties%20in%20Open%20Source%20Development%20on%20GitHub-%20A%20Case%20Study%20of%20Bountysource%20Bounties-2019-arXiv.pdf}, 
 year = {2019}
-}
-@article{Haber-Secure, 
-author = {Haber, Stuart and Stornetta, W. Scott}, 
-title = {{Secure names for bit-strings}}, 
-doi = {10.1145/266420.266430}, 
-abstract = {{An abstract is not available.}}, 
-pages = {28--35}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/secure-names-bit-strings.pdf}, 
-year = {1997}
-}
-@article{BayerHaber1992, 
-author = {Bayer, Dave and Haber, Stuart}, 
-title = {{Improving the Efficiency and Reliability of Digital Time-Stamping}}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Timestamp_BHS93.pdf}, 
-year = {1992}
-}
-@article{TimeStamp-Haber, 
-author = {Haber, Stuart and Stornetta, W. Scott}, 
-title = {{How to time-stamp a digital document}}, 
-issn = {0933-2790}, 
-doi = {10.1007/bf00196791}, 
-abstract = {{The prospect of a world in which all text, audio, picture, and video documents are in digital form on easily modifiable media raises the issue of how to certify when a document was created or last changed. The problem is to time-stamp the data, not the medium. We propose computationally practical procedures for digital time-stamping of such documents so that it is infeasible for a user either to back-date or to forward-date his document, even with the collusion of a time-stamping service. Our procedures maintain complete privacy of the documents themselves, and require no record-keeping by the time-stamping service.}}, 
-pages = {99--111}, 
-number = {2}, 
-volume = {3}, 
-journal = {Journal of Cryptology}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Haber-How%20to%20time-stamp%20a%20digital%20document-1991-Journal%20of%20Cryptology.pdf}, 
-year = {1991}
 }
 @article{OPR-Ross-Hellauer, 
 author = {Ross-Hellauer, Tony}, 
@@ -85,38 +63,6 @@ local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Ross
 year = {2019}, 
 rating = {4}
 }
-@article{DentalPublishing, 
-author = {Bal, A M and Mahawar, K K}, 
-title = {{Dental publishing: Peer review reviewed}}, 
-issn = {0007-0610}, 
-doi = {10.1038/sj.bdj.2016.890}, 
-pmid = {27932847}, 
-pages = {686--686}, 
-number = {11}, 
-volume = {221}, 
-journal = {British Dental Journal}, 
-keywords = {incentivization}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Bal-Dental%20publishing-%20Peer%20review%20reviewed-2016-British%20Dental%20Journal.pdf}, 
-year = {2016}, 
-rating = {3}
-}
-@article{Turbo-PLONK, 
-author = {Gabizon, Ariel and Williamson, Zachary J.}, 
-title = {{Proposal: The Turbo-PLONK program syntax for specifying SNARK programs}}, 
-keywords = {privacy,AZTEC protocol,SNARK}, 
-local-url = {file://localhost/Users/bt_neurospin/Downloads/proposal-turbo_plonk.pdf}, 
-rating = {2}
-}
-@article{IPFS, 
-author = {Benet, Juan}, 
-title = {{IPFS - Content Addressed, Versioned, P2P File System}}, 
-eprint = {1407.3561}, 
-abstract = {{The InterPlanetary File System (IPFS) is a peer-to-peer distributed file system that seeks to connect all computing devices with the same system of files. In some ways, IPFS is similar to the Web, but IPFS could be seen as a single BitTorrent swarm, exchanging objects within one Git repository. In other words, IPFS provides a high throughput content-addressed block storage model, with content-addressed hyper links. This forms a generalized Merkle DAG, a data structure upon which one can build versioned file systems, blockchains, and even a Permanent Web. IPFS combines a distributed hashtable, an incentivized block exchange, and a self-certifying namespace. IPFS has no single point of failure, and nodes do not need to trust each other.}}, 
-journal = {arXiv}, 
-local-url = {file://localhost/Users/bt_neurospin/Downloads/ipdf.pdf}, 
-year = {2014}, 
-rating = {3}
-}
 @article{AZTEC, 
 author = {Williamson, Zachary J.}, 
 title = {{The AZTEC Protocol}}, 
@@ -124,14 +70,6 @@ keywords = {privacy,AZTEC protocol,Ethereum},
 local-url = {file://localhost/Users/bt_neurospin/Downloads/AZTEC.pdf}, 
 year = {2018}, 
 rating = {5}
-}
-@book{Radical Markets, 
-author = {Posner, Eric A. and Weyl, E. Glen}, 
-title = {{Radical Markets- Uprooting Capitalism and Democracy for a Just Society}}, 
-isbn = {978-0-691-17750-2}, 
-publisher = {Princeton University Press}, 
-local-url = {file://localhost/Users/bt_neurospin/Downloads/Eric%20Posner,%20E.%20Weyl%20-%20Radical%20Markets_%20Uprooting%20Capitalism%20and%20Democracy%20for%20a%20Just%20Society%20(2018,%20Princeton%20University%20Press)%20-%20libgen.lc.pdf}, 
-year = {2018}
 }
 @article{PLONK, 
 author = {Gabizon, Ariel and Williamson, Zachary J. and Ciobotaru, Oana}, 
