--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -65,16 +65,16 @@ Peer review is still the only quality control mechanism devoted to evaluating sc
 \\
 \\
 Some mild attempts to credit peer review have been handled without much success by journals via attribution of virtual `badges', certificates of performance, citation in annual editorials \cite{Tennant2017-F1000R} where performance, though, is assessed only in terms of quantity of reviews but not quality \cite{Warne-RewRev}.
-\newline Partnering with publishers, the startup \emph{Publons}\footnote[1]{\emph{Publons}.\textsc{URL:} https://publons.com/about/home.} provides a free metric service for tracking, verification and recognition of publications, peer-reviews and journal editing in a single researcher identifier that showcases a record of scientific activity and impact based on authors' productivity.
+\newline Partnering with publishers, the startup \emph{Publons}\footnote[1]{\emph{Publons}. https://publons.com} provides a free metric service for tracking, verification and recognition of publications, peer-reviews and journal editing in a single researcher identifier that showcases a record of scientific activity and impact based on authors' productivity.
 
 \section{System concept}
 In this paper we propose Ants-Review, a new incentivisation mechanism built on Ethereum that issues open peer-reviews to validate scientific papers while preserving the anonymity of its contributors. We imagine a final paper originating from the peer-review process as a complex system that emerges from the interactions between the authors and the reviewers, a whole that is more than the sum of its parts. Therefore, the name evokes an ant colony as a self-organising organism in which all micro-contributions of the individuals emerge into complex behaviour. The original proposal behind this paper can be found here \cite{AntsReview}. Its design and implementation are exposed in the following section.
 
 \subsection{Design}
 
-\subsubsection{Incentivization and recognition.} A popular incentive model for open source software (OSS) is represented by Bounties. Bounties are prizes or monetary rewards given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are \emph{Gitcoin}\footnote[2]{\emph{Gitcoin}.\textsc{URL:} https://gitcoin.co.} and \emph{The Bounties Network}\footnote[3]{\emph{The Bounties Network}.\textsc{URL:}https://bounties.network.}. Incentives can be represented by tokens, units of values registered on the blockchain. In the network of the scientific community reviewers provide a service and those who consume it (authors, journals) should be able to contribute with tokens. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher. Thus, the system acts also as a reputation builder.
+\subsubsection{Incentivization and recognition.} A popular incentive model for open source software (OSS) is represented by Bounties. Bounties are prizes or monetary rewards given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are \emph{Gitcoin}\footnote[2]{\emph{Gitcoin}. https://gitcoin.co} and \emph{The Bounties Network}\footnote[3]{\emph{The Bounties Network}. https://bounties.network}. Incentives can be represented by tokens, units of values registered on the blockchain. In the network of the scientific community reviewers provide a service and those who consume it (authors, journals) should be able to contribute with tokens. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher. Thus, the system acts also as a reputation builder.
 
-\subsubsection{Transparency and re-usability of the records.} The peer-review history, including reviewers' recommendations and authors' replies, should be openly and permanently accessible to the community (in the form of `open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[4]{\emph{Neuroscience Peer Review Consortium}.\textsc{URL:}http://nprc.incf.org.} and independent companies like \emph{ResearchSquare} \footnote[5]{\emph{ResearchSquare}.\textsc{URL:}https://www.researchsquare.com.} and \emph{Peerage of Science} \footnote[6]{\emph{Peerage of Science}.\textsc{URL:} https://www.peerageofscience.org.}, that provide a scientific peer review service, peer-reviews in Ants-Review will be transferable across journals (like in `cascading' or `portable peer-reviews').
+\subsubsection{Transparency and re-usability of the records.} The peer-review history, including reviewers' recommendations and authors' replies, should be openly and permanently accessible to the community (in the form of `open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[4]{\emph{Neuroscience Peer Review Consortium}. http://nprc.incf.org} and independent companies like \emph{ResearchSquare} \footnote[5]{\emph{ResearchSquare}. https://www.researchsquare.com} and \emph{Peerage of Science} \footnote[6]{\emph{Peerage of Science}.  https://www.peerageofscience.org}, that provide a scientific peer review service, peer-reviews in Ants-Review will be transferable across journals (like in `cascading' or `portable peer-reviews').
 
 \subsubsection{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflicts of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data immutability and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remains unaltered and indelible. This notarization process is called Proof of Existence (PoE) and allows manual verification of the existence of the document.
 \newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s externally owned accounts (EOA) addresses and Zero-Knowledge Proof, a cryptographic method where a party can prove to another party the possession of certain information, like a secret key, without revealing that information (see 3.2).
@@ -104,7 +104,7 @@ The Ants-Review Protocol is divided into different modules responsible for the f
 \end{figure}
 
 \subsubsection{AntsReview.}
-AntsReview (see Figure \ref{fig:contracts} (\textbf{a})), the core of the smart contracts written in \emph{Solidity}\footnote[7]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, a contract-oriented programming language for writing smart contracts that run on the Ethereum Virtual Machine, is deployed on Ethereum Kovan Testnet\footnote[8]{\emph{AntsReview}.\textsc{URL:}\newline https://kovan.etherscan.io/address/0x85be8F04482cBB920550d5469E4dEdD6e1788121.}. AntsReview implements a bounty-like system (based on the \emph{StandardBounties} contract\footnote[9]{\emph{StandardBounties.sol}.\textsc{URL:}https://github.com/Bounties-Network/StandardBounties/blob/master/contracts/StandardBounties.sol.}) where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
+AntsReview (see Figure \ref{fig:contracts} (\textbf{a})), the core of the smart contracts written in \emph{Solidity}\footnote[7]{\emph{Solidity}. https://solidity.readthedocs.io.}, a contract-oriented programming language for writing smart contracts that run on the Ethereum Virtual Machine, is deployed on Ethereum Kovan Testnet\footnote[8]{\emph{AntsReview}. \newline https://kovan.etherscan.io/address/0x85be8F04482cBB920550d5469E4dEdD6e1788121.}. AntsReview implements a bounty-like system (based on the \emph{StandardBounties} contract\footnote[9]{\emph{StandardBounties.sol}. https://github.com/Bounties-Network/StandardBounties}) where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
 \newline In order to create a transparent and openly accessible AntReview, Alice has to complete a series of required tasks:
  \begin{itemize}
      \item \emph{upload of the files} containing the requirements of the peer review and the paper to be reviewed into IPFS, whose hash is stored into the Ethereum blockchain as PoE;
@@ -122,38 +122,36 @@ Access management of the Ants-Review protocol is defined and controlled by \emph
 \subsubsection{Privacy.}
 The anonymity of an agent in the system is achieved in two ways: via pseudo-anonymity, granted through Ethereum's EOAs that can pseudo-obscure the identity of the agent, and via private transactions allowed by AZTEC\cite{AZTEC} Protocol's security layer.
 
-\paragraph{\textbf{Pseudo-anonymity}-}EOAs in Ethereum are controlled via private keys. However, the privacy is limited by the fact that both the blockchain and its transactions are public.  Therefore, the details of the transactions are visible to anyone by browsing a block explorer (such as Etherscan \footnote[11]{\emph{Etherscan}. \textsc{URL:} https://etherscan.io/.}) and are subject to data mining that could extract value and identify users in the blockchain.
-\paragraph{\textbf{Private transactions}-}AZTEC Protocol was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (zk-SNARKs)\cite{zSNARK} and homomorphic encryption\footnote[12]{\emph{Homomorphic Encryption}. \textsc{URL:}\newline https://vitalik.ca/general/2020/07/20/homomorphic.html.} to validate encrypted transactions. zk-SNARKs are zero-knowledge proofs that require no interaction between prover and verifier. zk-SNARKs are used inside the Ants-Review protocol via the zkANTS token to allow private transactions between the agents. Future developments will allow to leverage on Permutations over Lagrange-bases for Oecumenical Noninteractive arguments of Knowledge (PLONK) \cite{PLONK}, 
+\paragraph{\textbf{Pseudo-anonymity.}}EOAs in Ethereum are controlled via private keys. However, the privacy is limited by the fact that both the blockchain and its transactions are public.  Therefore, the details of the transactions are visible to anyone by browsing a block explorer (such as Etherscan \footnote[11]{\emph{Etherscan}. https://etherscan.io/.}) and are subject to data mining that could extract value and identify users in the blockchain.
+\paragraph{\textbf{Private transactions.}}AZTEC Protocol was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (zk-SNARKs) \cite{zSNARK} and homomorphic encryption \cite{HomEncr} to validate encrypted transactions. zk-SNARKs are zero-knowledge proofs that require no interaction between prover and verifier. zk-SNARKs are used inside the Ants-Review protocol via the zkANTS token to allow private transactions between the agents. Future developments will allow to leverage on Permutations over Lagrange-bases for Oecumenical Noninteractive arguments of Knowledge (PLONK) \cite{PLONK}, 
 a universal zk-SNARK construction that reduces gas costs and improves scalability.
 
 \subsubsection{Tokenomics.}
-Ants-Review integrates a few \emph{ERC20}\footnote[13]{\emph{EIP 20}. \textsc{URL:} https://eips.ethereum.org/EIPS/eip-20.} tokens, each of whom plays an integral role in the functioning and anonymity of the decentralized protocol.
-\newline ANTS (see Figure \ref{fig:contracts}, (\textbf{c})) is the primary protocol token and can be staked into an AntReview. It's implemented by inheriting \emph{ERC20.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
-A Faucet (see Figure \ref{fig:contracts}, (\text{d}) is implemented to distribute ANTS token on Kovan Testnet for testing purposes. \newline zkANTS (see Figure \ref{fig:contracts}, (\textbf{e})) is a wrapper of ANTS that will be used inside the protocol to allow for private transactions among the agents of the protocol, preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters. It will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[14]{\emph{EIP  1724}.\textsc{URL:} https://github.com/ethereum/EIPs/issues/1724.} will be used as a template to build an AZTEC-compatible asset.
+Ants-Review integrates a few \emph{ERC20}\footnote[12]{\emph{EIP 20}. https://eips.ethereum.org/EIPS/eip-20.} tokens, each of whom plays an integral role in the functioning and anonymity of the decentralized protocol. ANTS (see Figure \ref{fig:contracts}, (\textbf{c})) is the primary protocol token and can be staked into an AntReview. It's implemented by inheriting \emph{ERC20.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
+A Faucet (see Figure \ref{fig:contracts}, (\text{d}) is implemented to distribute ANTS token on Kovan Testnet for testing purposes. zkANTS (see Figure \ref{fig:contracts}, (\textbf{e})) is a wrapper of ANTS that will be used inside the protocol to allow for private transactions among the agents of the protocol, preserving their anonymity as well as the amount of the AntReview reward and the contributions by the Anters. It will be implemented via AZTEC Protocol \cite{AZTEC}, that uses a cryptographic engine, \emph{ACE.sol}, a contract responsible for validating the set of AZTEC zero-knowledge proofs and performing any transfer instructions involving AZTEC notes, minted into a zkAsset, that can be converted into ERC20 tokens. In order to implement a zkAsset called zkANTS, \emph{zkAsset.sol}, a contract implementation of a confidential token that follows the EIP-1724 standard \footnote[13]{\emph{EIP  1724}. https://github.com/ethereum/EIPs/issues/1724.} will be used as a template to build an AZTEC-compatible asset.
 \\
 \\ The current state of the art of Ants-Review is represented by version 0.2.0 (MVP) live on Ethereum Kovan Testnet (see Supplementary Material).
 
 \section{Discussions}
 We have described how Ants-Review protocol can solve the limitations of the current peer review system (see 2.1). In particular we showed how the lack of recognition, the lack of transparency, fraud and misconduct can be solved via the Ants-Review Protocol (see §AntsReview in 3.2); the social and cognitive biases via anonymity granted by AZTEC Protocol (see §Privacy in 3.2); the slowness of the process, the need for evaluation of the peer-reviews themselves and the need for increasing the number of reviewers through the creation of the community of Anters. 
 \subsection{Future developments}
-An interesting aspect of the protocol is the double function of an AntReview respectively as a bounty and as a pool to stake ERC20 tokens like Dai\footnote[15]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}. Moreover, the duration of peer-reviews consents to connect the protocol to De-Fi services with the possibility for the community to accrue interest over time via MakerDAO Dai Saving Rate (Pot\footnote[16]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.}) or Compound\footnote[17]{\emph{Compound}.\textsc{URL:} https://compound.finance.}, to cite a few.
+An interesting aspect of the protocol is the double function of an AntReview respectively as a bounty and as a pool to stake ERC20 tokens like Dai\footnote[14]{\emph{Dai}. https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation}. Moreover, the duration of peer-reviews consents to connect the protocol to De-Fi services with the possibility for the community to accrue interest over time via MakerDAO Dai Saving Rate (Pot\footnote[15]{\emph{Pot}. https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.}) or Compound\footnote[16]{\emph{Compound}. https://compound.finance}, to cite a few.
 Therefore, an ERC20 \emph{pool token} would be automatically released by the protocol, representing the accrued interest on the Anters' stake over time that can be traded, sold, or held as the Anter desires.
 A Decentralized Autonomous Organization (DAO) \cite{Wang-DAO,DAOContr} could be formed in the future to allow ANTS stakers to participate in the governance of important aspects of the protocol, from smart contracts upgrades to minor changes in settings across the protocol.
-\newline Finally, a protocol upgrade inspired by \emph{Discover}\footnote[18]{\emph{Discover.sol}. \textsc{URL:}\newline https://github.com/dap-ps/discover/blob/master/contracts/Discover.sol.}, a Web3 browser by \emph{Status}\footnote[19]{\emph{Status}.\textsc{URL:} https://status.im/.} and still under investigation would allow Anters to validate peer-reviews via an upvote/downvote system that will consent the protocol to automatically pay out the reward to the reviewers based on the votes associated with their peer-reviews.
+\newline Finally, a protocol upgrade inspired by \emph{Discover}\footnote[17]{\emph{Discover.sol}. https://github.com/dap-ps/discover/blob/master/contracts/Discover.sol}, a Web3 browser by \emph{Status}\footnote[18]{\emph{Status}. https://status.im/} and still under investigation would allow Anters to validate peer-reviews via an upvote/downvote system that will consent the protocol to automatically pay out the reward to the reviewers based on the votes associated with their peer-reviews.
 
 \subsection{A new community-driven standard?}
-As Tennant points out \cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). Recently, pre-print servers, such as \emph{arXiv} and \emph{biorXiv}, started integrating peer-review services into their platforms: \emph{PREreview}\footnote[20]{\emph{PREreview.}  \textsc{URL:} https://www.prereview.org}, \emph{PeerCommunityIn.}\footnote[21]{\emph{PeerCommunityIn} \textsc{URL:} https://peercommunityin.org}, \emph{Review Commons}\footnote[22]{\emph{Review Commons.} \textsc{URL:} https://www.reviewcommons.org}, \emph{PrePrint Review}\footnote[23]{\emph{PrePrint Review.} \textsc{URL:} https://elifesci.org/preprint-review} and the previously mentioned \emph{Peerage of Science}. This dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by those alternative peer-review platforms and justify their added value (\emph{ibidem}). In our proposal we also decoupled the peer-review process from the publishers giving it back to the scientific community and applying incentives from tokenomics. We foresee that the future will evolve towards community-driven peer reviews: peer reviews will be more and more independent from publishers \cite{DecoupJ}, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
-\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process requires a standard for peer-reviews \cite{UPR}: for example some aspects might be taken over by AI assistants (such as the \emph{Artificial Intelligence Review Assistant (AIRA)}\footnote[24]{\emph{Artificial Intelligence to help meet global demand for high-quality, objective peer-review in publishing.} Posted on July 1, 2020 in \emph{Frontiers Announcements, Open Science and Peer Review}. \textsc{URL:} https://blog.frontiersin.org/2020/07/01/artificial-intelligence-peer-review-assistant-aira/.}) leaving to the reviewers the sole task of evaluating the content of a paper. Building smart-contracts for peer reviews might accelerate this novel process of standardization. We hope that soon the value of peer review as a public good will be recognized by research funders and hiring committees.
+As Tennant points out \cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). Recently, pre-print servers, such as \emph{arXiv} and \emph{biorXiv}, started integrating peer-review services into their platforms: \emph{PREreview}\footnote[19]{\emph{PREreview.} https://www.prereview.org}, \emph{PeerCommunityIn.}\footnote[20]{\emph{PeerCommunityIn} https://peercommunityin.org}, \emph{Review Commons}\footnote[21]{\emph{Review Commons.} \textsc{URL:} https://www.reviewcommons.org}, \emph{PrePrint Review}\footnote[22]{\emph{PrePrint Review.} https://elifesci.org/preprint-review} and the previously mentioned \emph{Peerage of Science}. This dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by those alternative peer-review platforms and justify their added value (\emph{ibidem}). In our proposal we also decoupled the peer-review process from the publishers giving it back to the scientific community and applying incentives from tokenomics. We foresee that the future will evolve towards community-driven peer reviews: peer reviews will be more and more independent from publishers \cite{DecoupJ}, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
+\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process requires a standard for peer-reviews \cite{UPR}: for example some aspects might be taken over by AI assistants (such as the \emph{Artificial Intelligence Review Assistant (AIRA)\cite{AIRA}} leaving to the reviewers the sole task of evaluating the content of a paper. Building smart-contracts for peer reviews might accelerate this novel process of standardization. We hope that soon the value of peer review as a public good will be recognized by research funders and hiring committees.
 
 \section{Conclusion}
 In this paper we addressed a crucial problem within scholarly academic communication: the peer review process. We have shown how blockchain technology could provide an efficient and viable solution to open up possible directions for a paradigm shift in scientific communication. We proposed an incentive mechanism that could solve the problems of lack of acknowledgment and trust during peer reviews. We exposed the architecture of our project for which we adopted cutting-edge tools from the open source blockchain ecosystem.
 
-
+\small{
 \subsubsection{Supplementary Material}
 Source code, DOI: 10.5281/zenodo.3971044; 
 \newline DApp: https://ants-review.on.fleek.co;
 
-\small{
 \subsubsection{Declaration of Competing Interest}
 The authors declare no competing interests.
 
